--- a/src/main/resources/templates/infrastructure/security/userPrincipal.mustache
+++ b/src/main/resources/templates/infrastructure/security/userPrincipal.mustache
@@ -67,7 +67,17 @@ public Set<String> getRoles() {
 
 	@Override
 	public boolean isEnabled() {
-	return true;
+	    if (user == null){
+
+		    return true;
+		    }
+
+		if(user.getEnabled() == null){
+
+			 return true;
+			}
+
+	return user.getEnabled();
 	}
 
 	@Override
@@ -79,7 +89,6 @@ public Set<String> getRoles() {
 	return user.getId();
 	}
 
-	{{#isMultiTenant}}
 	@Override
 	public String getTenantId() {
 
@@ -91,13 +100,80 @@ public Set<String> getRoles() {
 
 	return user.getTenant().getId();
 	}
-	{{/isMultiTenant}}
+
 
 	public String getCreatedBy() {
-		if (user == null)
-			return null;
-
+		if (user == null || user.getCreatedBy() == null) return null;
 		return user.getCreatedBy().getId();
 	}
+
+	public User getUser() {
+		return user;
+	}
+
+	public Integer getLimitPerDay() {
+		if (user == null || user.getLimitPerDay() == null) return 0;
+		return user.getLimitPerDay();
+	}
+
+	public Boolean isPremium() {
+		if (user == null || user.getIsPremium() == null) return false;
+		return user.getIsPremium();
+	}
+
+	public String getFirstName() {
+		return user != null ? user.getFirstName() : null;
+	}
+
+	public String getLastName() {
+		return user != null ? user.getLastName() : null;
+	}
+
+	public String getEmail() {
+		return user != null ? user.getEmail() : null;
+	}
+
+	public String getTelephone() {
+		return user != null ? user.getTelephone() : null;
+	}
+
+	public Object getTenant() {
+		return user != null ? user.getTenant() : null;
+	}
+
+	public Object getUserRoles() {
+		return user != null ? user.getUserRoles() : null;
+	}
+
+
+     public Boolean isBan() {
+		if (user == null || user.getIsBan() == null) return false;
+		return user.getIsBan();
+	}
+
+	public String getMessage() {
+		return user != null ? user.getMessage() : null;
+	}
+
+	@Override
+	public String toString() {
+		if (user == null) return "UserPrincipal{user=null}";
+
+		return "UserPrincipal{" +
+				"id=" + getId() +
+				", username=" + getUsername() +
+				", password=" + getPassword() +
+				", firstName=" + getFirstName() +
+				", lastName=" + getLastName() +
+				", email=" + getEmail() +
+				", telephone=" + getTelephone() +
+				", limitPerDay=" + getLimitPerDay() +
+				", isPremium=" + isPremium() +
+				", userRoles=" + getRoles() +
+				", createdBy=" + getCreatedBy() +
+				", tenant=" + getTenantId() +
+				'}';
+	}
+
 }
 
