--- a/src/main/resources/templates/infrastructure/security/authController.mustache
+++ b/src/main/resources/templates/infrastructure/security/authController.mustache
@@ -61,7 +61,7 @@ try {
 			.body(AuthResponseDto.builder()
 				.token(null)
 				.code(0)
-				.message("Unauthorized")
+				.message(e.getMessage())
 				.build());
 		}
 	}
