--- a/src/main/resources/templates/front/swift/views/detailsView.mustache
+++ b/src/main/resources/templates/front/swift/views/detailsView.mustache
@@ -127,28 +127,36 @@ struct {{entity}}DetailsView: View {
     private var overviewSection: some View {
         VStack(spacing: 12) {
             {{#fields}}
-    {{#isDisplayName}}
-    {{#isText}}
+             {{#isDisplayName}}
+                 {{^isManyToOne}}
+                {{#isText}}
             detailItem(icon: "person.text.rectangle", title: t("{{displayName}}"), value: {{entityLowerCase}}.{{name}} ?? "-")
-{{/isText}}
-    {{#isInt}}
+            {{/isText}}
+                {{#isInt}}
             detailItem(icon: "number", title: t("{{displayName}}"), value: String({{entityLowerCase}}.{{name}}))
             {{/isInt}}
-    {{#isFloat}}
+                 {{#isFloat}}
             detailItem(icon: "number", title: t("{{displayName}}"), value: String(format: "%.2f", {{entityLowerCase}}.{{name}}))
             {{/isFloat}}
-    {{#isString}}
+                {{#isString}}
             detailItem(icon: "textformat", title: t("{{displayName}}"), value: {{entityLowerCase}}.{{name}} ?? "-")
             {{/isString}}
-    {{#isDouble}}
+                {{#isDouble}}
             detailItem(icon: "dollarsign.circle", title: t("{{displayName}}"), value: String(format: "%.2f", {{entityLowerCase}}.{{name}}))
             {{/isDouble}}
-    {{#isBool}}
+             {{#isBool}}
             detailItem(icon: "checkmark.circle", title: t("{{displayName}}"), value: {{entityLowerCase}}.{{name}} ? t("Oui") : t("Non"))
             {{/isBool}}
-    {{#isDate}}
+             {{#isDate}}
         detailItem(icon: "calendar", title: t("{{displayName}}"), value: formatDate({{entityLowerCase}}.{{name}}))
             {{/isDate}}
+                     {{/isManyToOne}}
+
+         {{#isManyToOne}}
+  detailItem(icon: "person.text.rectangle",
+   title: t("{{displayName}}"), value: get{{nameCapitalized}}Name( {{entityLowerCase}}.{{name}} ?? ""))
+
+         {{/isManyToOne}}
 
     {{/isDisplayName}}
 {{/fields}}
@@ -202,4 +210,14 @@ struct {{entity}}DetailsView: View {
         formatter.timeStyle = .short
         return formatter.string(from: date)
     }
+
+{{#fields}}
+    {{#isManyToOne}}
+    func get{{nameCapitalized}}Name(_ id: String)-> String{
+         let viewModel{{nameCapitalized}} = {{nameCapitalized}}ListViewModel(modelContext: modelContext, user: user)
+       return viewModel{{nameCapitalized}}.getNameById(for:  id)
+    }
+{{/isManyToOne}}
+    {{/fields}}
+
 }
