feat: improve details

--- a/src/main/resources/templates/front/swift/views/builderView.mustache
+++ b/src/main/resources/templates/front/swift/views/builderView.mustache
@@ -15,4 +15,5 @@ public func intField(_ label: String, value: Binding<Int>) -> some View {
 
 public func dateField(_ label: String, date: Binding<Date>) -> some View {
     DatePicker(label, selection: date, displayedComponents: .date)
+        .environment(\.locale, Locale(identifier: "fr_FR"))
 }
